--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1632,7 +1632,7 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 .sidebar-content ul li.side-item.logout a.log-out:hover { color: #ffffff !important;}
 .content_outer {width: 100%;padding-left: 300px;padding-right: 30px;min-height: 100vh;padding-top: 0;padding-bottom: 30px;}
 .header_nav {width: 100%;float: left;padding: 20px;background: #ffff;box-shadow: 4px 0px 16px 0px #0000000A;border-radius: 0 0 10px 10px;}
-.header_nav .header_wrapp {display: flex;width: 100%;flex-wrap: wrap;justify-content: space-between;align-items: center;}
+.header_nav .header_wrapp {display: flex;width: 100%;flex-wrap: wrap;justify-content: space-between;align-items: center; gap: 10px;}
 .header_nav .header_wrapp .header_title {width: auto;float: left;}
 .header_nav .header_wrapp .header_right {float: right;}
 .header_nav .header_wrapp .header_title h2 {font-size: 20px;font-weight: 700;}
@@ -2475,6 +2475,7 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
   background: #EFEFEF;
   border-radius: 10px;
 }
+
 
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
