--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2547,3 +2547,11 @@ nav.navbar { padding-left: 60px;}
 .payment-wrap .nav.nav-tabs li.nav-item .nav-link {font-size: 13px;}
 
 }
+
+
+@media screen and (max-width:480px) {
+.payment-wrap .tab-content .tab-pane .payment-workshop .amout-item .col-md-8 {width: 100%;}
+.payment-wrap .tab-content .tab-pane .payment-workshop .amout-item .col-md-4 {width: 100%; padding: 0;}
+.payment-wrap .tab-content .tab-pane .payment-workshop .amout-item .col-md-8 .forms-inputs.mb-4 { margin: 0 0 15px !important;}
+
+}
