--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2400,6 +2400,7 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
   padding: 15px;
   border: 1px solid #BCBCBC;
   border-radius: 10px;
+  max-width: 300px;
 }
 
 .payment-wrap .tab-content .amount-form .amout-item .form-group label.file-upload img {
