--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2218,6 +2218,7 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 
 .payment-wrap .nav.nav-tabs li.nav-item {
   background: #F5F5F5;
+  border-radius: .25rem;
 }
 
 .payment-wrap .nav.nav-tabs li.nav-item .nav-link {
