--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2547,7 +2547,9 @@ nav.navbar { padding: 10px 6%;}
 .exam-overview .exam-overview-content { margin: 20px 0 0;}
 
 .payment-wrap .nav.nav-tabs li.nav-item .nav-link {font-size: 18px; padding: 8px 18px;}
-.payment-wrap .nav.nav-tabs li.nav-item button#add-price-tab {margin: 12px 0 0;}
+.payment-wrap .nav.nav-tabs li.nav-item button#add-price-tab {margin: 0 0 0;}
+.payment-wrap .nav.nav-tabs#priceTab li.nav-item { width: 50%;  margin: 0 0 0;}
+.payment-wrap .nav.nav-tabs#priceTab li.nav-item .nav-link { width: 100%;}
 
 .payment-wrap .tab-content .tab-pane .card .card-body .first {width: 100%;}
 .payment-wrap .tab-content .tab-pane .card .card-body .sec { width: 100%;}
