--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2593,4 +2593,9 @@ nav.navbar { padding: 10px 6%;}
   margin: 0;
 }
 
+.payment-wrap .nav.nav-tabs li.nav-item .nav-link {
+  font-size: 12px;
+  padding: 8px;
+}
+
 }
