--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2567,6 +2567,9 @@ nav.navbar { padding: 10px 6%;}
 .payment-wrap .tab-content a.float-end {
   float: left !important;
 }
+.payment-wrap .tab-content .amount-form .amout-item .amout-item-content .row > div {
+  padding: 0;
+}
 
 }
 
