--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2225,6 +2225,7 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
   padding: 8px 20px;
   font-size: 18px;
   color: #000;
+  background: #F5F5F5;  
 }
 
 .payment-wrap .nav.nav-tabs li.nav-item .nav-link.active {
