--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2590,6 +2590,11 @@ nav.navbar { padding: 10px 6%;}
   padding: 8px 15px;
 }
 
+.payment-wrap .tab-content .tab-pane .payment-workshop .amout-item .col-md-8 {
+  padding: 0 10px 0 0 !important;
+  width: 75%;
+}
+
 }
 
 @media screen and (max-width:600px){
