--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -101,7 +101,8 @@ body {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    padding: 0 5%;
+    padding: 50px 5%;
+    overflow-y: auto;
 }
 
 .login-wrapp .login-cont .login-row .login-left img {
