--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2506,6 +2506,14 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
     background-position-y: 3px;
 }
 
+.warning-container .alert-warning .btn-link {
+  color: #1989F8;
+  font-size: 20px;
+  display: inline-block;
+  padding: 0;
+  margin: 10px 0 0 35px;
+}
+
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
 
