--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -302,6 +302,7 @@ nav.navbar .dropdown .nav-link.dropdown-toggle {
   background-position-x: 100%;
   background-size: 12px;
   color: #000;
+  font-size: 18px;
 }
 
 nav.navbar .dropdown .nav-link.dropdown-toggle:after {
