--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2567,6 +2567,18 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
   border-radius: 6px;
 }
 
+#lockedModal .modal-content { padding: 10px; border-radius: 10px;}
+#lockedModal .modal-content .modal-header {padding-bottom: 0; border: none; justify-content: left;}
+#lockedModal .modal-content p { font-size: 16px; line-height: 1.5; margin: 0 0 20px;}
+#lockedModal .modal-dialog { max-width: 425px; top: 42%; transform: translateY(-50%);}
+#lockedModal .modal-content .modal-header h5 { font-size: 20px; font-weight: 500; color: #218df8;}
+#lockedModal .modal-content .modal-footer .btn-primary {width: 48%;margin: 0 2% 0 0;background: #000;border: 1px solid #000;}
+#lockedModal .modal-content .modal-footer .btn-secondary {width: 48%;border: 1px solid #8F8F8F;background: none;color: #000000;margin: 0 0 0;}
+#lockedModal .modal-content .modal-footer .btn-primary:hover { background: none; color: #000;}
+#lockedModal .modal-content .modal-footer .btn-secondary:hover { background: #8F8F8F; color: #fff;}
+#lockedModal .modal-content .modal-header button.close { background: none; color: #000; width: auto; height: auto; font-size: 40px; font-weight: 300; position: absolute;  right: 15px; top: 0;}
+#lockedModal .modal-content .modal-footer { padding-top: 0; border: none;}
+
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
 
