--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2579,6 +2579,18 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 #lockedModal .modal-content .modal-header button.close { background: none; color: #000; width: auto; height: auto; font-size: 40px; font-weight: 300; position: absolute;  right: 15px; top: 0;}
 #lockedModal .modal-content .modal-footer { padding-top: 0; border: none;}
 
+#intensive-workshop-payment-modal .modal-content { padding: 10px; border-radius: 10px;}
+#intensive-workshop-payment-modal .modal-content .modal-header {padding-bottom: 0; border: none; justify-content: left;}
+#intensive-workshop-payment-modal .modal-content p { font-size: 16px; line-height: 1.5; margin: 0 0 20px;}
+#intensive-workshop-payment-modal .modal-dialog { max-width: 425px; top: 42%; transform: translateY(-50%);}
+#intensive-workshop-payment-modal .modal-content .modal-header h5 { font-size: 20px; font-weight: 500; color: #218df8;}
+#intensive-workshop-payment-modal .modal-content .modal-body .btn.btn-dark {width: 48%;  margin-right: 2%;}
+#intensive-workshop-payment-modal .modal-content .modal-body .btn.btn-secondary { width: 48%; border: 1px solid #8F8F8F; background: none; color: #000000;}
+#intensive-workshop-payment-modal .modal-content .modal-body .btn.btn-dark:hover { background: none; color: #000;}
+#intensive-workshop-payment-modal .modal-content .modal-body .btn.btn-secondary:hover { background: #8F8F8F; color: #fff;}
+#intensive-workshop-payment-modal .modal-content .modal-header button.close { background: none; color: #000; width: auto; height: auto; font-size: 40px; font-weight: 300; position: absolute;  right: 15px; top: 0;}
+
+
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
 
