--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2611,6 +2611,9 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 .support-content { background: #FFFFFF; padding: 20px 20px; box-shadow: 4px 0px 16px 0px #0000000A; border-radius: 10px; margin: 16px 0 20px !important;}
 .support-content p { font-size: 20px; line-height: 1.5; margin: 0 0 15px;}
 
+.back-btn {width: 30px; height: 30px; margin: -2px 10px 0 0;}
+.back-btn img { width: 100%; display: block;}
+
 
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
