--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2614,6 +2614,9 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 .back-btn {width: 30px; height: 30px; margin: -2px 10px 0 0;}
 .back-btn img { width: 100%; display: block;}
 
+.lesson-exit { width: 30px; height: 30px; display: block; margin: -2px 10px 0 0;}
+.lesson-exit img { width: 100%; display: block;}
+
 
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
