--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -414,7 +414,7 @@ button.close {
   max-width: 1320px;
 }
 .lesson .lesson-title {
-  margin: 0 30px;
+  margin: 0 30px 0 35px;
   padding: 2px 5px;
   border-left:3px solid #ef9b10
 }
