--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -516,6 +516,7 @@ margin-left:auto;
   padding:5px 15px;
   justify-content: center;
   align-items: center;
+  height: 100%;
   margin:auto;
   border: none;
 }
