--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2617,7 +2617,7 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 
 .lesson-exit { width: 30px; height: 30px; display: block; margin: -2px 10px 0 0;}
 .lesson-exit img { width: 100%; display: block;}
-
+.examclass .lesson-pagination .lesson-right.pagination-arrow { margin-left: auto;}
 
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
