--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1628,13 +1628,14 @@ button.btn-slider img { display: block;}
 .sidebar-content {overflow: hidden; overflow-y: auto;height: 100%;padding: 0 0 50px;}
 .sidebar-content::-webkit-scrollbar {display: none;}
 .sidebar-content ul li.side-item{margin: 0 0 2px; width: 100%;}
-.side_bar .sidebar-content .supportsection { width: 100%; margin: auto 0 0 0;}
+.side_bar .sidebar-content .supportsection { width: 100%; margin: auto 0 0 0; position: relative; padding: 25px 0 0;}
+.side_bar .sidebar-content .supportsection:before {content: "";position: absolute; width: 90%; background: rgb(30 30 30 / 10%); height: 1px; top: 15px; left: 50%; transform: translateX(-50%);}
 .sidebar-content ul li.side-item a {padding: 10px 30px;display: flex;align-items: center;color: #000;cursor: pointer;position: relative;border-radius: 0; border: 1px solid transparent;}
 .sidebar-content ul li.side-item a:hover {background: #EFEFEF;color: #FFCD56;  border: 1px solid #dadada;}
 .sidebar-content ul li.side-item.active a {background: #EFEFEF;color: #FFCD56;  border: 1px solid #dadada;}
-.sidebar-content ul li.side-item.logout {padding: 25px 0 0 0;position: relative;}
+.sidebar-content ul li.side-item.logout {padding: 0 0 0 0;position: relative;}
 .sidebar-content ul li.side-item a.log-out {color: #ec5e5e;}
-.sidebar-content ul li.side-item.logout:after {content: "";position: absolute;width: 60%;background: rgb(30 30 30 / 10%);height: 1px;top: 15px;}
+.sidebar-content ul li.side-item.logout:after {content: "";position: absolute;width: 60%;background: rgb(30 30 30 / 10%);height: 1px;top: 15px; display: none;}
 span.side-icon {display: inline-block;  width: 25px;  margin-right: 10px;padding-top: 3px; opacity: 0;}
 span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-top: 3px;position: absolute; opacity: 1;}
 .sidebar-content ul li.side-item.active .side-icon { opacity: 1;}
