--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1622,7 +1622,7 @@ section.post-section .post-container .post-item .post-content{
 .side_bar { width: 105px;height: 100vh;padding: 30px 0; position: fixed;background: #ffff;z-index: 99;box-shadow: 4px 0px 16px 0px #0000000A;left: 0;border-radius: 0 10px 10px 0;top: 80px;     border: 1px solid #dadada; transition: all .25s ease-in-out;}
 .side-bar-logo {margin: 0 0 20px;}
 button.btn-slider { position: absolute; right: -20px; top: 50%; transform: translateY(-50%); z-index: 9; padding: 0; width: 30px; height: 30px;transition: all .25s ease-in-out;}
-.side_bar .sidebar-content .sidebar-nav { width: 270px;height: calc(100vh - 117px); display: flex; flex-wrap: wrap; flex-direction: column;}
+.side_bar .sidebar-content .sidebar-nav { width: 270px;min-height: calc(100vh - 117px); display: flex; flex-wrap: wrap; flex-direction: column;}
 button.btn-slider img { display: block;}
 .side-nav-toggle {display: none;}
 .sidebar-content {overflow: hidden; overflow-y: auto;height: 100%;padding: 0 0 50px;}
