--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2631,6 +2631,24 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 
 .modal { background: rgb(0 0 0 / 50%);}
 
+.private_section {background: #FFFFFF; margin: 20px 0 0; padding: 40px 30px; border-radius: 20px;}
+.private_section .workshopclass .card { border: 1px solid #3F8D26; border-radius: 20px; transition: all .25s ease-in-out; height: 100%;}
+.private_section .card .card-body { padding: 40px;}
+.private_section .card .card-body .category-image {width: 100%;margin: 0 auto 20px;height: 260px;text-align: center;}
+.private_section .card .card-body .category-content { width: 100%; flex: none;}
+.private_section .card .card-body .category-image img {width: 100%;height: 100%;max-width: 250px;object-fit: contain;}
+.private_section .workshopclass .card-body .category h3 { font-size: 24px; color: #3F8D26; margin: 0 0 20px;}
+.private_section .card .card-body .category { justify-content: center;}
+.private_section .card .card-body .category p { font-size: 20px; color: #4A4A4A; line-height: 1.56;}
+.private_section .intensivework .card h3 { font-size: 24px; color: #334CA9; margin: 0 0 20px;}
+.private_section .card:hover { transform: scale(1.01);}
+.private_section .intensivework .card { border: 1px solid #334CA9; border-radius: 20px; transition: all .25s ease-in-out; height: 100%;}
+.private_section .card .card-body .category button.btn-live-class {margin: 0 0 0 auto;background: no-repeat;border: none;}
+.private_section .card .card-body .category button.btn.btn-dark { float: right; margin: -15px -25px 0 10px;}
+.private_section .card .card-body .category .card-box { display: flex; flex-wrap: wrap; align-items: flex-start;}
+
+
+
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
 
