--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2670,6 +2670,24 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 .timetable-wrapp .timetable-row .user-icons .user-icon { display: inline-block; width: 20px; margin: 0 0 0 8px;}
 
 
+.live-modal .modal-dialog {max-width: 90% !important;}
+.live-modal .modal-dialog .modal-row {width: 100%; display: flex; flex-wrap: wrap; justify-content: space-between;}
+.live-modal .modal-dialog .modal-row .modal-col1 {width: 50%; padding-right: 15px;}
+.live-modal .modal-dialog .modal-row .modal-col1 .form-row { width: 100%;}
+.live-modal .modal-dialog .modal-row .modal-col1 .form-row .text-field {width: 100%; display: flex; flex-wrap: wrap; margin: 0 0 20px;}
+.live-modal .modal-dialog .modal-row .modal-col1 .form-row .text-field input {width: 100%;height: 60px; border: 1px solid #BCBCBC; border-radius: 5px; flex: 1 0 0; max-width: 300px;}
+.live-modal .modal-dialog .modal-row .modal-col1 .form-row .text-field .add-btn {font-size: 16px; font-weight: 600; color: #ffff; background: #000; border: 1px solid #000; padding: 8px 25px; margin: 0 0 0 12px; border-radius: 5px;}
+.live-modal .modal-dialog .modal-row .modal-col1 .form-row .text-field-preview {width: 100%; display: flex;flex-wrap: wrap;align-items: center; padding: 15px; border: 1px solid #BCBCBC; border-radius: 5px; margin: 0 0 22px; justify-content: space-between;}
+.live-modal .modal-dialog .modal-row .modal-col1 .form-row .text-field-preview p { margin: 0;}
+.live-modal .modal-dialog .modal-row .modal-col1 .form-row .text-field-preview .user-icons { width: auto; display: inline-block;}
+.live-modal .modal-dialog .modal-row .modal-col1 .form-row .text-field-preview .user-icons .user-icon { width: 20px; display: inline-block; position: relative; margin: 0 0 0 7px; cursor: pointer;}
+.live-modal .modal-dialog .modal-row .modal-col1 .form-row .text-field-preview .user-icons .user-icon img { width: 100%; display: block; transition: all .25s ease-in-out;}
+.live-modal .modal-dialog .modal-row .modal-col1 .form-row .text-field-preview .user-icons .user-icon .active-icon { width: 100%; position: absolute; top: 0; left: 0; margin: 0; padding: 0;  opacity: 0;  transition: all .25s ease-in-out;}
+.live-modal .modal-dialog .modal-row .modal-col1 .form-row .text-field-preview .user-icons .user-icon:hover > img {  opacity: 0;}
+.live-modal .modal-dialog .modal-row .modal-col1 .form-row .text-field-preview .user-icons .user-icon:hover .active-icon { opacity: 1;}
+
+
+
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
 
