--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1650,6 +1650,7 @@ aside.side_bar .menutext { display: none !important;}
 aside.side_bar .side-item.status { display: none !important;}
 aside.side_bar.slider-btn .menutext { display: block !important;}
 aside.side_bar.slider-btn .side-item.status { display: block !important;}
+.sidebar-content ul li.side-item a.side-dropdown-toggle {background: url(../images/chevron-down.svg) no-repeat center / 12px; background-position-x: 95%;}
 
 aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg);}
 
