--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2690,6 +2690,30 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 
 
 
+.post-section .post-row {width: 100%;display: flex; flex-wrap: wrap; margin: 0 0 25px;}
+.post-section .post-row .post-container1 {width: 28%; margin: 0 2% 0 0;}
+.post-section .post-row .post-container1 .post-col1 {width: 100%; background: #fff; padding: 25px; border-radius: 10px;}
+.post-section .post-row .post-container1 .row {margin: 0;}
+.post-section .post-row .post-container1 .post-col1 h4 {font-size: 20px; font-weight: 600; color: #000;}
+.post-section .post-row .post-container1 .post-col1 .back-btn-wrapp { width: 100%;}
+.post-section .post-row .post-container1 .post-col1  .hashtag-wrapp { width: 100%;}
+.post-section .post-row .post-container1 .post-col1 .hashtag-wrapp .list-group { width: 100%;}
+.post-section .post-row .post-container1 .post-col1 .hashtag-wrapp .list-group li.list-group-item { border: none; padding: 0; margin: 0 0 15px;}
+.post-section .post-row .post-container1 .post-col1 .hashtag-wrapp .list-group li.list-group-item a { padding: 10px; display: block; color: #000; background: #FFEAC2; border-radius: 10px; word-break: break-all;}
+.post-section .post-row .post-container { width: 50%; padding: 25px; background: #ffff; border-radius: 10px;}
+.post-section .post-row .post-container .post-item { padding: 0; margin: 0 0 40px; border: none;}
+.post-section .post-row .post-container .post-item .post-header { margin: 0 0 22px;}
+.post-section .post-row .post-container .post-item .post-header .title { flex: 1 0 0;}
+.post-section .post-row .post-container .post-item .post-header .avathar { background: #D9D9D9; margin: 0 12px 0 0; padding: 5px;}
+.post-section .post-row .post-container .post-item .post-header .action { width: 123px;}
+.post-section .post-row .post-container .post-item .post-content p { font-size: 16px; margin: 0 0 20px;}
+.post-section .post-row .post-container .post-item  .poll-options { margin: 0 0 30px;}
+.post-section .post-row .post-container .post-item .poll-options .form-check { padding: 0;}
+.post-section .post-row .post-container .post-item .post-image { width: 100%; margin: 0 0 20px; text-align: center;}
+.post-section .post-row .post-container .post-item .post-image img {  width: auto;}
+.post-section .post-row .post-container .post-item .post-actions .post-action-btn {padding: 0; margin: 0 10px  0 0;}
+
+
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
 
