--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2727,6 +2727,7 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 .invite-wrap .table-outer table  tbody tr { border: none;}
 .invite-wrap .table-outer table tbody tr td { padding: 15px 12px;}
 .invite-wrap .table-outer table .form-check input.form-check-box:checked { background: url(../images/check-solid.svg) center; background-repeat: no-repeat; background-size: contain;}
+.invite-wrap.categoryclass .row .card .card-body button.btn.btn-dark {margin: 12px 0 0;}
 
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
